fixed pricing section

--- a/index.html
+++ b/index.html
@@ -2176,11 +2176,10 @@
               <h2
                 class="mb-3 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]"
               >
-                Awesome Pricing Plan
+              Pricing Plans That Fit Your Business
               </h2>
               <p class="text-base text-body-color dark:text-dark-6">
-                There are many variations of passages of Lorem Ipsum available
-                but the majority have suffered alteration in some form.
+                Whether you’re just starting out or scaling your operations, MailForge has a plan that works for you.
               </p>
             </div>
           </div>
@@ -2193,13 +2192,13 @@
               <span
                 class="block mb-5 text-xl font-medium text-dark dark:text-white"
               >
-                Starter
+              Pro Mail Monthly
               </span>
               <h2
                 class="mb-11 text-4xl font-semibold text-dark dark:text-white xl:text-[42px] xl:leading-[1.21]"
               >
-                <span class="text-xl font-medium">$</span>
-                <span class="-ml-1 -tracking-[2px]">25.00</span>
+                <span class="text-xl font-medium">R</span>
+                <span class="-ml-1 -tracking-[2px]">99.00</span>
                 <span
                   class="text-base font-normal text-body-color dark:text-dark-6"
                 >
@@ -2212,16 +2211,16 @@
                 </h5>
                 <div class="flex flex-col gap-[14px]">
                   <p class="text-base text-body-color dark:text-dark-6">
-                    Up to 1 User
+                    100 mail accounts
                   </p>
                   <p class="text-base text-body-color dark:text-dark-6">
-                    All UI components
+                    10GB SSD storage
                   </p>
                   <p class="text-base text-body-color dark:text-dark-6">
-                    Lifetime access
+                    Unlimited access
                   </p>
                   <p class="text-base text-body-color dark:text-dark-6">
-                    Free updates
+                    Free updates & Setup
                   </p>
                 </div>
               </div>
@@ -2245,17 +2244,17 @@
               <span
                 class="block mb-5 text-xl font-medium text-dark dark:text-white"
               >
-                Basic
+              Pro Mail Annual
               </span>
               <h2
                 class="mb-11 text-4xl font-semibold text-dark dark:text-white xl:text-[42px] xl:leading-[1.21]"
               >
-                <span class="text-xl font-medium">$</span>
-                <span class="-ml-1 -tracking-[2px]">59.00</span>
+                <span class="text-xl font-medium">R</span>
+                <span class="-ml-1 -tracking-[2px]">850.00</span>
                 <span
                   class="text-base font-normal text-body-color dark:text-dark-6"
                 >
-                  Per Month
+                  Per Year
                 </span>
               </h2>
               <div class="mb-[50px]">
@@ -2264,16 +2263,16 @@
                 </h5>
                 <div class="flex flex-col gap-[14px]">
                   <p class="text-base text-body-color dark:text-dark-6">
-                    Up to 1 User
+                    Up to 500 Users
                   </p>
                   <p class="text-base text-body-color dark:text-dark-6">
-                    All UI components
+                    Optimized for Enterprise Operations
                   </p>
                   <p class="text-base text-body-color dark:text-dark-6">
                     Lifetime access
                   </p>
                   <p class="text-base text-body-color dark:text-dark-6">
-                    Free updates
+                    Free Updates, Setup & Support
                   </p>
                 </div>
               </div>
@@ -2292,17 +2291,17 @@
               <span
                 class="block mb-5 text-xl font-medium text-dark dark:text-white"
               >
-                Premium
+              Startup Forge
               </span>
               <h2
                 class="mb-11 text-4xl font-semibold text-dark dark:text-white xl:text-[42px] xl:leading-[1.21]"
               >
-                <span class="text-xl font-medium">$</span>
-                <span class="-ml-1 -tracking-[2px]">99.00</span>
+                <span class="text-xl font-medium">R</span>
+                <span class="-ml-1 -tracking-[2px]">1100.00</span>
                 <span
                   class="text-base font-normal text-body-color dark:text-dark-6"
                 >
-                  Per Month
+                  Once Off
                 </span>
               </h2>
               <div class="mb-[50px]">
@@ -2311,16 +2310,16 @@
                 </h5>
                 <div class="flex flex-col gap-[14px]">
                   <p class="text-base text-body-color dark:text-dark-6">
-                    Up to 1 User
+                    CIPC Processing
                   </p>
                   <p class="text-base text-body-color dark:text-dark-6">
-                    All UI components
+                    PTY Ltd Registration
                   </p>
                   <p class="text-base text-body-color dark:text-dark-6">
-                    Lifetime access
+                    Free Email accounts*
                   </p>
                   <p class="text-base text-body-color dark:text-dark-6">
-                    Free updates
+                    Expert support
                   </p>
                 </div>
               </div>
