--- a/index.html
+++ b/index.html
@@ -2740,8 +2740,7 @@
               <p
                 class="mx-auto max-w-[485px] text-base text-body-color dark:text-dark-6"
               >
-                There are many variations of passages of Lorem Ipsum available
-                but the majority have suffered alteration in some form.
+              We’ve answered some of the most common questions about getting started with professional email hosting through MailForge
               </p>
             </div>
           </div>
@@ -2773,13 +2772,10 @@
                 <h3
                   class="mb-6 text-xl font-semibold text-dark dark:text-white sm:text-2xl lg:text-xl xl:text-2xl"
                 >
-                  Is TailGrids Well-documented?
+                How long does it take to set up my email?
                 </h3>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  It takes 2-3 weeks to get your first blog post ready. That
-                  includes the in-depth research & creation of your monthly
-                  content ui/ux strategy that we do writing your first blog
-                  post.
+                  In most cases, your custom email will be live within 24 hours once your domain is ready. For Startup Forge clients, setup includes company registration and domain configuration.
                 </p>
               </div>
             </div>
@@ -2808,13 +2804,10 @@
                 <h3
                   class="mb-6 text-xl font-semibold text-dark dark:text-white sm:text-2xl lg:text-xl xl:text-2xl"
                 >
-                  Is TailGrids Well-documented?
+                Do I need my own domain before signing up?
                 </h3>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  It takes 2-3 weeks to get your first blog post ready. That
-                  includes the in-depth research & creation of your monthly
-                  content ui/ux strategy that we do writing your first blog
-                  post.
+                  No — if you don’t already have one, we can help you register a domain as part of the onboarding process.
                 </p>
               </div>
             </div>
@@ -2845,13 +2838,10 @@
                 <h3
                   class="mb-6 text-xl font-semibold text-dark dark:text-white sm:text-2xl lg:text-xl xl:text-2xl"
                 >
-                  Is TailGrids Well-documented?
+                What’s the difference between monthly and annual plans?
                 </h3>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  It takes 2-3 weeks to get your first blog post ready. That
-                  includes the in-depth research & creation of your monthly
-                  content ui/ux strategy that we do writing your first blog
-                  post.
+                  Our annual plan gives you the same great service at a discounted rate — you pay once a year instead of every month.
                 </p>
               </div>
             </div>
@@ -2880,13 +2870,10 @@
                 <h3
                   class="mb-6 text-xl font-semibold text-dark dark:text-white sm:text-2xl lg:text-xl xl:text-2xl"
                 >
-                  Is TailGrids Well-documented?
+                Can I add more email accounts later?
                 </h3>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  It takes 2-3 weeks to get your first blog post ready. That
-                  includes the in-depth research & creation of your monthly
-                  content ui/ux strategy that we do writing your first blog
-                  post.
+                  Yes. You can start with one account and scale up as your team grows, adding new addresses whenever you need them.
                 </p>
               </div>
             </div>
