--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About | Play Tailwind</title>
+    <title>About | MailForge</title>
     <link
       rel="shortcut icon"
       href="assets/images/favicon.png"
@@ -294,11 +294,8 @@
               <h1
                 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]"
               >
-                About Us Page
+              About MailForge
               </h1>
-              <p class="mb-5 text-base text-body-color dark:text-dark-6">
-                There are many variations of passages of Lorem Ipsum available.
-              </p>
 
               <ul class="flex items-center justify-center gap-[10px]">
                 <li>
@@ -339,20 +336,15 @@
                 <h2
                   class="mb-5 text-3xl font-bold leading-tight text-dark dark:text-white sm:text-[40px] sm:leading-[1.2]"
                 >
-                  Brilliant Toolkit to Build Nextgen Website Faster.
+                An Email That Works as Hard as You Do
                 </h2>
                 <p
                   class="mb-10 text-base leading-relaxed text-body-color dark:text-dark-6"
                 >
-                  The main ‘thrust' is to focus on educating attendees on how to
-                  best protect highly vulnerable business applications with
-                  interactive panel discussions and roundtables led by subject
-                  matter experts.
+                Stand out in every inbox with secure, professional emails with your own domain with zero hassle. From rock-solid uptime to  speed, security, and scalability — MailForge keeps your business talking.
                   <br />
                   <br />
-                  The main ‘thrust' is to focus on educating attendees on how to
-                  best protect highly vulnerable business applications with
-                  interactive panel.
+                  MailForge handles all the technical details, from migration to management, giving you a world-class email experience with zero stress.
                 </p>
 
                 <a
@@ -394,7 +386,7 @@
                   >
                     <div>
                       <span class="block text-5xl font-extrabold text-white">
-                        09
+                        03
                       </span>
                       <span class="block text-base font-semibold text-white">
                         We have
@@ -545,14 +537,13 @@
                 <p
                   class="mx-auto mb-6 max-w-[515px] text-base leading-[1.5] text-white"
                 >
-                  There are many variations of passages of Lorem Ipsum but the
-                  majority have suffered in some form.
+                There are many ways to set up business email, but most can be confusing and costly. Mailforge makes it simple, secure, and professional from day one.
                 </p>
                 <a
                   href="javascript:void(0)"
                   class="inline-block rounded-md border border-transparent bg-secondary px-7 py-3 text-base font-medium text-white transition hover:bg-[#0BB489]"
                 >
-                  Start using Play
+                  Start using MailForge
                 </a>
               </div>
             </div>
