--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                   </li>
                   <li class="relative group">
                     <a
-                      href="#about"
+                    href="about.html"
                       class="flex py-2 mx-8 text-base font-medium ud-menu-scroll text-dark group-hover:text-primary dark:text-white lg:ml-7 lg:mr-0 lg:inline-flex lg:px-0 lg:py-6 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-10"
                     >
                       About
@@ -299,7 +299,7 @@
                 class="mx-auto mb-9 max-w-[600px] text-base font-medium text-white sm:text-lg sm:leading-[1.44]"
               >
                 Reliable, secure and lightning-fast business emails built on modern infrastructure.
-                Powered by industry-leading tech,,, No spam, no downtime, just crystal-clear communication.
+                Powered by industry-leading tech, No spam, no downtime, just crystal-clear communication.
               </p>
               <ul
                 class="flex flex-wrap items-center justify-center gap-5 mb-10"
@@ -4431,11 +4431,10 @@
               <h2
                 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]"
               >
-                Our Recent News
+                Recent News
               </h2>
               <p class="text-base text-body-color dark:text-dark-6">
-                There are many variations of passages of Lorem Ipsum available
-                but the majority have suffered alteration in some form.
+                The email space is constantly evolving. Stay up to date with the latest trends, tips, and updates shaping how businesses communicate.
               </p>
             </div>
           </div>
@@ -4444,7 +4443,7 @@
           <div class="w-full px-4 md:w-1/2 lg:w-1/3">
             <div class="mb-10 wow fadeInUp group" data-wow-delay=".1s">
               <div class="mb-8 overflow-hidden rounded-[5px]">
-                <a href="blog-details.html" class="block">
+                <a href="evolution-of-emails.html" class="block">
                   <img
                     src="./assets/images/blog/blog-01.jpg"
                     alt="image"
@@ -4456,21 +4455,20 @@
                 <span
                   class="mb-6 inline-block rounded-[5px] bg-primary px-4 py-0.5 text-center text-xs font-medium leading-loose text-white"
                 >
-                  Dec 22, 2023
+                  Aug 08, 2025
                 </span>
                 <h3>
                   <a
-                    href="javascript:void(0)"
+                    href="evolution-of-emails.html"
                     class="inline-block mb-4 text-xl font-semibold text-dark hover:text-primary dark:text-white dark:hover:text-primary sm:text-2xl lg:text-xl xl:text-2xl"
                   >
-                    Meet AutoManage, the best AI management tools
+                  The Evolution of Email: Past, Present, and Future
                   </a>
                 </h3>
                 <p
                   class="max-w-[370px] text-base text-body-color dark:text-dark-6"
                 >
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
+                We'll take a nostalgic trip through the past, examine the current state of email, and speculate on the exciting possibilities that the future holds.
                 </p>
               </div>
             </div>
